some dynamic invert classes, separate stack_tag_selector, add dummy icons

--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -18,6 +18,13 @@ body {
   width: inherit !important;
 }
 
+.invert > p {
+  color:white !important;
+  /*filter: invert(1) !important; */
+  
+} 
+
+
 .tone_item {
     transition: all .25s ease !important;
 }
