--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -8,18 +8,18 @@ template(name='nav')
                 i.big.yin.yang.icon
             a.icon.item(href='/stack')
                 i.big.stack.exchange.icon
-            // a.icon.item(href='/groups')
-            //     i.big.users.icon
-            // a.icon.item(href='/requests')
-            //     i.big.hand.holding.icon
+            a.icon.item(href='/youtube')
+                i.big.youtube.icon
+            a.icon.item(href='/images')
+                i.big.image.icon
             // a.icon.item(href='/events')
             //     i.big.calendar.icon
             // .ui.search.item
             //     .ui.transparent.inverted.input
             //         input(type='text')
-            a.icon.item(href='/m/reddit')
+            a.icon.item(href='/reddit')
                 i.big.reddit.icon
-            a.icon.item(href='/m/wikipedia')
+            a.icon.item(href='/wikipedia')
                 i.big.wikipedia.icon
         unless connected
             .item
@@ -205,7 +205,7 @@ template(name='view_chatpop')
             
             
 template(name='rightbar')
-    .ui.right.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};")
+    .ui.right.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};" class=currentUser.invert_class)
         // a.item.toggle_rightbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
         //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
         //     |#{currentUser.name}
@@ -254,7 +254,7 @@ template(name='rightbar')
 
 
 template(name='leftbar')
-    .ui.left.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};")
+    .ui.left.sidebar.vertical.borderless.inverted.invert.menu.scrolling(style="background-color:#{current_user.theme_color};" class=currentUser.invert_class)
         a.item.toggle_leftbar(href="/" class="{{isActivePath '/'}}")
             i.yin.yang.icon
             | dao
