--- a/parts/client/stack_page.jade
+++ b/parts/client/stack_page.jade
@@ -7,15 +7,16 @@ template(name='stack_page')
                         i.chevron.left.icon
                         | #{site}
                 .eight.wide.center.aligned.column
-                    .ui.header !{title}
+                    .ui.header 
+                        if watson.metadata.image
+                            img.ui.invert.small.inline.image(src=watson.metadata.image)    
+                        |!{title}
                 .four.wide.center.aligned.column
                     a.ui.circular.icon.button(href=link target='_window' title=link)
                         // |#{link}
                         i.external.large.icon
             .row
-                .six.wide.column
-                    if watson.metadata.image
-                        img.ui.invert.small.inline.image(src=watson.metadata.image)    
+                .four.wide.column
                     each tags 
                         a.ui.basic.large.pointer.label.add_stack_tag #{this}
                     if is_answered
@@ -56,20 +57,28 @@ template(name='stack_page')
                     +print_this
                     +doc_sentiment
                     +doc_emotion
-                .ten.wide.column.scrolling
+                    i.big.refresh.circular.link.icon.get_question
+                    i.big.exclamation.circular.link.icon.get_answers
+                    // +skve k='stack_section' v='main' l='content' i='content' 
+                    unless watson
+                        .ui.big.fluid.button.call_watson
+                            i.large.brain.icon
+                            |analyze
+                    
+                .twelve.wide.column
                     .ui.secondary.segment
                         // div(class=currentUser.invert_class)
-                        |!{body}
+                        .f12 !{body}
                     each question_answers
                         .ui.segment
                             if is_accepted 
                                 .ui.invert.inverted.green.label 
                                     |accepted
                             // div(class=currentUser.invert_class)
-                            |!{body}
+                            .f11 !{body}
                             with owner
                                 .ui.segment
-                                    .ui.inline.header
+                                    a.ui.inline.header(href="/site/#{current_doc.site}/user/#{user_id}")
                                         img.ui.avatar.invert.image(src=profile_image)
                                         |!{display_name}
                                     |rep:#{reputation}
@@ -78,9 +87,6 @@ template(name='stack_page')
                                     |#{accept_rate}
                                     a(href=link) #{link}
                             |#{content_license}
-                    i.big.refresh.circular.link.icon.get_question
-                    i.big.exclamation.circular.link.icon.get_answers
-                    // +skve k='stack_section' v='main' l='content' i='content' 
                     +skve k='stack_section' v='watson' l='watson' i='brain' 
                     if tone
                         +skve k='stack_section' v='tone' l='tone' i='user' 
@@ -97,10 +103,6 @@ template(name='stack_page')
                                 |analyze tone
                             +watson_view
                             +watson_full
-                    unless watson
-                        .ui.big.fluid.button.call_watson
-                            i.large.brain.icon
-                            |analyze
                     // if skv_is 'stack_section' 'embed'
                     //     iframe(width="100%" height="500" src=link frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
                     +comments
