--- a/parts/client/stack_site.jade
+++ b/parts/client/stack_site.jade
@@ -116,9 +116,9 @@ template(name='site_page')
 
 template(name='stack_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.zoomer.tertiary.large.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.zoomer.tertiary.large.button.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.rounded.inline.invert.image.zoomer(src=term.watson.metadata.image class=currentUser.invert_class)    
+                img.ui.mini.rounded.inline.image.zoomer(src=term.watson.metadata.image class=currentUser.invert_class)    
         | #{name}
         // small #{count}
