--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -7,13 +7,13 @@ template(name='nav')
             a.icon.item(href='/')
                 i.big.yin.yang.icon
             a.icon.item(href='/stack')
-                i.big.stack.exchange.icon
-            a.icon.disabled.item(href='/users')
-                i.big.users.icon
+                i.large.stack.exchange.icon
+            a.icon.item(href='/users')
+                i.large.users.icon
             a.icon.disabled.item(href='/youtube')
-                i.big.youtube.icon
+                i.large.youtube.icon
             a.icon.disabled.item(href='/images')
-                i.big.image.icon
+                i.large.image.icon
             // a.icon.item(href='/events')
             //     i.big.calendar.icon
             // .ui.search.item
