--- a/parts/stack_user.jade
+++ b/parts/stack_user.jade
@@ -6,9 +6,35 @@ template(name='stackuser_page')
     with stackuser_doc
         .ui.stackable.padded.grid
             .row
-                .sixteen.wide.column
-                    .ui.header !{title}
                 .four.wide.column
+                    img.ui.rounded.image(src=profile_image class=currentUser.invert_class)
+                    .ui.header !{display_name}
+                .ui.large.list
+                    .item badge_counts
+                    .item bronze #{badge_counts.bronze}
+                    .item silver #{badge_counts.silver}
+                    .item gold #{badge_counts.gold}
+                    .item account_id #{account_id}
+                    .item is_employee #{is_employee}
+                    .item last_modified_date #{last_modified_date}
+                    .item last_access_date #{last_access_date}
+                    .item reputation_change_year #{reputation_change_year}
+                    .item reputation_change_quarter #{reputation_change_quarter}
+                    .item reputation_change_month #{reputation_change_month}
+                    .item reputation_change_week #{reputation_change_week}
+                    .item reputation_change_day #{reputation_change_day}
+                    .item reputation #{reputation}
+                    .item creation_date #{creation_date}
+                    .item user_type #{user_type}
+                    .item user_id #{user_id}
+                    .item accept_rate #{accept_rate}
+                    .item location #{location}
+                    .item website_url #{website_url}
+                    a.item(href=link target='_window') 
+                        i.linkify.icon
+                        |#{link}
+
+                .twelve.wide.column
                     each tags 
                         a.ui.basic.pointer.label.add_stack_tag #{this}
                     if is_answered
