--- a/parts/client/stack_page.jade
+++ b/parts/client/stack_page.jade
@@ -57,8 +57,8 @@ template(name='stack_page')
                     +print_this
                     +doc_sentiment
                     +doc_emotion
-                    i.big.refresh.circular.link.icon.get_question
-                    i.big.exclamation.circular.link.icon.get_answers
+                    // i.big.refresh.circular.link.icon.get_question
+                    // i.big.exclamation.circular.link.icon.get_answers
                     // +skve k='stack_section' v='main' l='content' i='content' 
                     unless watson
                         .ui.big.fluid.button.call_watson
